(executable
 (name test)
 (modules test)
 (libraries threads)
 (preprocess (staged_pps ppx_kmclib)))

(executable
 (name test_handler)
 (modules test_handler)
 (libraries threads)
 (preprocess (staged_pps ppx_kmclib)))

(env
  (dev
    (flags (:standard -open Kmclib -open Printf -warn-error -22))))
